fixed page horizontal overflow

--- a/Client/src/routes/css/takeActionPage.module.scss
+++ b/Client/src/routes/css/takeActionPage.module.scss
@@ -171,7 +171,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 16px 0px;
+  // padding: 16px 0px;
   box-sizing: border-box;
   gap: 8px;
 }
@@ -224,7 +224,7 @@
   height: 800px;
 }
 .frameWrapper {
-  width: 1338px;
+  width: 1075px;
   display: flex;
   flex-direction: column;
   align-items: center;
